--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
-# Compiled class file
+# === Compiled Java class files ===
 *.class
 
-# Log file
+# === Log files ===
 *.log
 
-# BlueJ files
+# === BlueJ files ===
 *.ctxt
 
-# Mobile Tools for Java (J2ME)
+# === Mobile Tools for Java (J2ME) ===
 .mtj.tmp/
 
-# Package Files #
+# === Java packaged archives ===
 *.jar
 *.war
 *.nar
@@ -19,6 +19,26 @@
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# === JVM crash logs ===
 hs_err_pid*
 replay_pid*
+
+# === IntelliJ IDEA project files ===
+.idea/
+*.iws
+*.iml
+
+# === Maven/Gradle build output ===
+target/
+out/
+
+# === Node.js / Vue.js dependencies and builds ===
+node_modules/
+dist/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+
+# === OS-generated files ===
+.DS_Store
+Thumbs.db
