--- a/backend/demo/src/main/resources/application.yml
+++ b/backend/demo/src/main/resources/application.yml
@@ -10,3 +10,9 @@ spring:
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
+
+pagehelper:
+  helper-dialect: mysql
+  reasonable: true
+  support-methods-arguments: true
+  params: count=countSql
